# rss-pipes

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  technical-design-document.md
rss_pipes/: digest.py  main.py  schedule.py
rss_pipes/templates/: atom.xml.jinja2  atom_feed.xml
tests/unit/rss_pipes/: test_digest.py  test_main.py  test_schedule.py  test_utils.py
tests/unit/rss_pipes/fixtures/: atom.xml  weekly_atom.xml
